--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Assets\Scripts\Decor_Chicken.cs" />
     <Compile Include="Assets\Scripts\Chicken_movement.cs" />
     <Compile Include="Assets\Scripts\Object_Spawner.cs" />
+    <Compile Include="Assets\Scripts\Exit_Script.cs" />
     <Compile Include="Assets\Scripts\Wolf_Chase.cs" />
     <Compile Include="Assets\Scripts\SoundFXManager.cs" />
     <Compile Include="Assets\Scripts\Chunk_Generator.cs" />
